--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -12,16 +12,16 @@
             display: inline-block;
             border: 2px solid black;
             border-radius: 10px;
-            background-color: lightgray;
+            background-color: rgb(211, 211, 211);
             width: 300px;
             height: 300px;
         }
 
         div#q1{
-            background-color: skyblue;
+            background-color: rgb(119, 159, 175);
         }
         div#q2{
-          background-image: linear-gradient(to bottom, yellow, orange);
+          background-image: linear-gradient(to bottom, yellow, rgb(255, 165, 0));
         }
         div#q3{
           background-image: url(imagens/pattern003.png);
