alteração de comentario

--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -9,7 +9,7 @@
     <style>
         body {
             background-image: url(imagens/wallpaper001.jpg);
-        }
+        }       
 
         div.quadrado {
             display: inline-block;
@@ -22,15 +22,16 @@
 
         div#q1 {
             background-color: rgb(119, 159, 175);
-        }
+        } /*primeira configuração de fundo*/
 
         div#q2 {
             background-image: linear-gradient(to bottom, yellow, rgb(255, 165, 0));
-        }
+        } /* segumda configuração de funndo*/
 
         div#q3 {
             background-image: url(imagens/pattern003.png);
-        }
+        } /*terceira configuração de fundo*/
+        
     </style>
 </head>
 
