--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -13,7 +13,7 @@
 
         div.quadrado {
             display: inline-block;
-            border: 2px solid black;
+            border: 2px solid rgb(0, 0, 0);
             border-radius: 10px;
             background-color: rgb(211, 211, 211);
             width: 300px;
