--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -25,7 +25,7 @@
         } /*primeira configuração de fundo*/
 
         div#q2 {
-            background-image: linear-gradient(to bottom, yellow, rgb(255, 165, 0));
+            background-image: linear-gradient(to bottom, rgb(255, 255, 0), rgb(255, 165, 0));
         } /* segumda configuração de funndo*/
 
         div#q3 {
