--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -31,6 +31,9 @@
         div#q3 {
             background-image: url(imagens/pattern003.png);
         } /*terceira configuração de fundo*/
+         div#q4{
+            background-image: linear-gradient(to top, red,orange);
+         }
         
     </style>
 </head>
@@ -43,6 +46,10 @@
 
     </div>
     <div class="quadrado" id="q3">
+
+    </div>
+
+    <div class="quadrado" id="q4">
 
     </div>
 
