teste de imagem de fundo ex022/fundo006

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Imagem de Fundo</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
-            height: 100vh;
-            background-color: black;
+             height: 100vh;
+            /*background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
-            background-repeat:repeat-y;
+            background-repeat:no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /* shorthand - background
+            color > image >position > repeat > [size] > attachment*/
+
+            background: black url("imagens/wallpaper002.jpg") center center no-repeat  fixed;
             background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +34,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi eius eveniet atque quo impedit quibusdam odit aliquam odio aspernatur enim unde tempore quaerat similique culpa, voluptatibus aperiam, deserunt dolorem optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, veniam inventore est modi vero dolor quae nulla repellat id consectetur, expedita eaque accusantium, excepturi quidem maiores. Numquam minus ad doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolor ex minus odio quam molestiae, ad amet aliquam accusamus, et, voluptatibus pariatur nesciunt expedita! Minima nihil illo omnis voluptates a? </p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi eius eveniet atque quo impedit quibusdam odit aliquam odio aspernatur enim unde tempore quaerat similique culpa, voluptatibus aperiam, deserunt dolorem optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, veniam inventore est modi vero dolor quae nulla repellat id consectetur, expedita eaque accusantium, excepturi quidem maiores. Numquam minus ad doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolor ex minus odio quam molestiae, ad amet aliquam accusamus, et, voluptatibus pariatur nesciunt expedita! Minima nihil illo omnis voluptates a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima repellendus dignissimos natus, aliquid, quasi adipisci quos doloribus magnam enim necessitatibus nostrum fugit ipsa aspernatur nam quod ipsam, accusamus est atque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam possimus quibusdam tenetur temporibus nemo. Cum animi in quia quo, necessitatibus blanditiis ipsam iste hic illum non atque error aut sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolorem rerum a vel placeat, fugiat ab reprehenderit omnis. Omnis obcaecati vitae alias dolore autem voluptatibus quas beatae quidem impedit quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ratione voluptas sint quo expedita at officiis corrupti porro, aut eum ab, veniam consequatur, officia neque cum voluptatum dolore cupiditate minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sequi incidunt mollitia! Nihil nam quasi possimus, accusamus, vitae ratione, eum sed culpa qui similique beatae! Ex velit commodi odit assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, enim nisi tenetur sequi qui laboriosam similique temporibus. Dolorum, ea dicta provident earum quod quia, sint facere aliquam esse est illum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque rerum eum necessitatibus quibusdam laudantium numquam commodi voluptate at tenetur unde et modi aliquid recusandae, inventore laborum. Nesciunt, repellat quia? Nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam molestiae possimus corrupti quod ipsa quo officia earum labore. Ipsam unde veritatis vel ratione quidem assumenda exercitationem, esse eligendi quibusdam eos. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt beatae iste architecto voluptate nulla corporis, totam ad aut praesentium nemo deserunt tenetur nisi explicabo voluptatem eligendi iusto molestias modi eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi ipsam alias tenetur quaerat a quo enim quis cumque, commodi nisi, aliquam ullam doloremque tempore quisquam harum ratione cupiditate velit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam facilis explicabo corrupti ducimus voluptas repellendus. Quasi excepturi reiciendis, ipsam dolorem eveniet amet nemo doloribus dolor culpa exercitationem libero incidunt quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quasi. Doloribus id perferendis molestias vitae, illo odit porro quod et atque necessitatibus ex odio consequuntur minus fugiat ipsa autem in! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur nesciunt aliquam facilis eveniet iste reprehenderit! Aliquam eaque odio numquam illo perspiciatis ad reiciendis, rem sed quis, soluta doloribus! Quia, illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum corporis a impedit quaerat quibusdam laudantium, magni possimus laborum tempora inventore. Molestiae, corporis vero. Nostrum ad, quod quibusdam quas ipsam odit!</p>
     </main>
 </body>
 </html>
