--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -29,6 +29,9 @@
             border-radius: 15px;
 
         }
+        h1{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
