--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -25,8 +25,8 @@
             background-color: yellow;
 
             left: 50%;
-            top: 50%
-            
+            top: 50%;
+            transform: translate(-50%,-50%);
                 /* transform: translate(-50%, -50%); */
 
         }
