--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -12,7 +12,7 @@
             position: relative;
             height: 96vh;
             padding: 10px;
-            background-color: purple;
+            background-color: rgb(128, 0, 128);
         }
 
         #conteudo {
@@ -22,7 +22,7 @@
             position: absolute;
             height: 200px;
             width: 400px;
-            background-color: yellow;
+            background-color: rgb(255, 255, 0);
 
             left: 50%;
             top: 50%;
