--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 
 <body>
@@ -61,7 +62,7 @@
             Pra entender como fica <br>
             Decifre esse rabisco.
         </p>
-        
+
     </section>
 
 
