--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -10,12 +10,14 @@
 
 <body>
     <header>
+
         <h1>Cordel Moderno</h1>
+
         <p>Por <a href=" https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
 
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -29,7 +31,7 @@
 
 
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -43,7 +45,7 @@
 
 
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -67,7 +69,7 @@
 
 
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -81,7 +83,7 @@
 
 
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
