--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -35,7 +35,7 @@
 
 <body>
     
-        <marquee behavior="alternate" scrollamount="3"  direction="right">
+        <marquee behavior="alternate"  direction="right"scrollamount="3" >
             <h1>Minha Primeira Tabela</h1>
         </marquee>
     
