--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -36,7 +36,9 @@
 <body>
     
         <marquee behavior="alternate"  direction="right"scrollamount="3" >
-            <h1>Minha Primeira Tabela</h1>
+            <ins>
+                <h1>Minha Primeira Tabela</h1>
+            </ins>
         </marquee>
     
     <!-- HIERAQUIA DE ATABELAS (SIMPLES)
