--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -28,6 +28,7 @@
         td.dado {
             background-color: yellow;
         }
+        td.dado01{background-color: rgb(140, 179, 140);}
        
     </style>
 
@@ -48,7 +49,7 @@
               TABLE DATA = DADO DE TABELA -->
     <table>
         <tr><!--Primeira linha-->
-            <td>A1</td>
+            <td class="dado01">A1</td>
             <td>B1</td>
             <td>C1</td>
         </tr>
