--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -28,7 +28,11 @@
         td.dado {
             background-color: yellow;
         }
-        td.dado01{background-color: rgb(140, 179, 140);}
+        td.dado01{background-color: rgb(140, 179, 140);
+        }
+        h1,ins{
+            color: darkblue;
+        }
        
     </style>
 
