--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -51,28 +51,30 @@
           TABLE ROWS = LINHA DE TABELA
             TABLE HEADER = CABEÇALHO DE TABELA
               TABLE DATA = DADO DE TABELA -->
-    <table>
-        <tr><!--Primeira linha-->
-            <td class="dado01">A1</td>
-            <td>B1</td>
-            <td>C1</td>
-        </tr>
-        <tr class="linha"><!--segunda linha-->
-            <td>A2</td>
-            <td>B2</td>
-            <td>C2</td>
-        </tr>
-        <tr><!--Terceira linha-->
-            <td>A3</td>
-            <td>B3</td>
-            <td>C3</td>
-        </tr>
-        <tr><!--Quarta linha-->
-            <td>A4</td>
-            <td class="dado">B4</td>
-            <td>C4</td>
-        </tr>
-    </table>
+    <marquee behavior="alternate" direction="right" scrollamount="4">
+        <table>
+            <tr><!--Primeira linha-->
+                <td class="dado01">A1</td>
+                <td>B1</td>
+                <td>C1</td>
+            </tr>
+            <tr class="linha"><!--segunda linha-->
+                <td>A2</td>
+                <td>B2</td>
+                <td>C2</td>
+            </tr>
+            <tr><!--Terceira linha-->
+                <td>A3</td>
+                <td>B3</td>
+                <td>C3</td>
+            </tr>
+            <tr><!--Quarta linha-->
+                <td>A4</td>
+                <td class="dado">B4</td>
+                <td>C4</td>
+            </tr>
+        </table>
+    </marquee>
 </body>
 
 </html>
