--- a/exercicios/ex023/desafio01.html
+++ b/exercicios/ex023/desafio01.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 01</title>
+    <title>Desafio tabelas 01</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <h1>Desafio 01</h1>
+    <h1>Desafio Tabelas 01</h1>
     <table>
         <tr>
             <td>1</td>
