--- a/exercicios/ex023/desafio02.html
+++ b/exercicios/ex023/desafio02.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 02</title>
+    <title>Desafio Tabelas 02</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <h1>Desafio 02</h1>
+    <h1>Desafio Tabelas 02</h1>
     <table>
         <tr>
             <td colspan="4">A</td>
@@ -46,14 +46,11 @@
         <tr>
             <td>G</td>
             <td>H</td>
-
-
             <td>I</td>
         </tr>
-        <tr>
 
-
-        </tr>
+         <tr></tr>
+       
         <tr>
             <td>J</td>
             <td>L</td>
