--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -24,8 +24,9 @@
 
         th,
         td {
-            border: 1px solid darkgray;
+            border: 1px solid gray;
             padding: 10px;
+            
 
         }
     </style>
