--- a/exercicios/ex023/desafio03.html
+++ b/exercicios/ex023/desafio03.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>
+    <title>Tabelas 03</title>
     <style>
+
         body {
             font-family: Arial, Helvetica, sans-serif;
 
@@ -25,7 +26,7 @@
 
         th,
         td {
-            border: 1px solid gray;
+            border: 1px solid rgb(7, 7, 7);
             padding: 10px;
 
 
@@ -57,34 +58,30 @@
         <thead>
 
             <tr>
-                <th rowspan="3" scope="col" class="cor">Area</th>
+                <th rowspan="3" scope="col" class="cor">Área</th>
                 <th rowspan="3" scope="col" class="cor">Disciplina</th>
                 <th colspan="2" scope="colgroup" class="cor">Notas</th>
-
-                <th rowspan="2" scope="col" class="cor">Media</th>
+                <th rowspan="2" scope="col" class="cor">Média</th>
             </tr>
 
             <tr>
 
-                <th class="cor">nota 1</th>
-                <th class="cor">nota 2</th>
+                <th class="cor">Nota 1</th>
+                <th class="cor">Nota 2</th>
+
             </tr>
 
         </thead>
         <tbody>
 
             <th rowspan="4" scope="rowgroup">Exatas</th>
-            <td>Matematica</td>
-            <td >0.0</td>
-            <td>0.0</td>
-            <td>0.0</td>
-
-
-
-
+                 <td>Matemática</td>
+                 <td >0.0</td>
+                 <td>0.0</td>
+                 <td>0.0</td>
 
             <tr>
-                <td>Fisica</td>
+                <td>Física</td>
                 <td>0.0</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -107,7 +104,7 @@
             </tr>
 
             <tr>
-                <th colspan="4" class="esquerda">Media de Extras</th>
+                <th colspan="4" class="esquerda">Média de Extras</th>
                 <td class="esquerda">0.0</td>
             </tr>
 
@@ -115,10 +112,10 @@
 
             <th rowspan="3" scope="rowgroup">Humanas</th>
 
-            <td>Historia</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>0.0</td>
+                <td>História</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
 
 
             <tr>
@@ -131,7 +128,7 @@
 
             
         <tfoot>
-            <th colspan="4" scope="row">Media de Humanas</th>
+            <th colspan="4" scope="row">Média de Humanas</th>
             <td>0.0</td>
         </tfoot>
         
