--- a/exercicios/ex023/desafio03.html
+++ b/exercicios/ex023/desafio03.html
@@ -50,7 +50,7 @@
 
 <body>
 
-    <h1>Exercicios de Tabelas</h1>
+    <h1>Exércicios de Tabelas</h1>
     <table>
         <caption>
             Desafio 03
