--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas Resposivas</title>
     <Style>
-        body
-            {
-                font-family: Arial, Helvetica, sans-serif;
-            }
-        table{
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
             border-collapse: collapse;
 
-        }    
-        caption{
+        }
+
+        caption {
             font-size: 1.2em;
             font-weight: bolder;
             padding: 20px;
         }
-        th,td{
+
+        th,
+        td {
             border: 1px solid black;
             padding: 10px;
-            
+
         }
-        tr:nth-child(even)
-        {
-            background-color: rgb(228,228,228);
+
+        tr:nth-child(even) {
+            background-color: rgb(228, 228, 228);
         }
-        div#container{
-            
+
+        div#container {
+
             overflow-x: auto;
         }
     </Style>
 </head>
+
 <body>
     <h1>Tabelas em telas pequenas</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, voluptate numquam? Laborum aperiam nobis delectus molestiae voluptatibus, nemo voluptatum impedit ipsum. Sed esse assumenda pariatur iusto, corrupti fugiat dolorem cupiditate!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, voluptate numquam? Laborum aperiam nobis delectus
+        molestiae voluptatibus, nemo voluptatum impedit ipsum. Sed esse assumenda pariatur iusto, corrupti fugiat
+        dolorem cupiditate!</p>
     <div id="container">
         <table>
             <caption>Tabelas Responsivas</caption>
@@ -166,4 +174,5 @@
         </table>
     </div>
 </body>
+
 </html>
