--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -11,7 +11,9 @@
         }
 
         table {
-            border-collapse: collapse;
+            /* border: 0.0 solid black; */
+            border-collapse:collapse;
+            
 
         }
 
