--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -32,6 +32,9 @@
             padding: 10px;
 
         }
+        th{
+            background-color: darkgray;
+        }
 
         tr:nth-child(even) {
             background-color: rgb(228, 228, 228);
