--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -30,19 +30,23 @@
             background-color: chartreuse;
         }
 
-        col.cnome {
+        /* col.cnome {
             background-color: bisque;
-        }
+        } */
 
         /* col.cgrupo{ */
         /* background-color:red; */
         /* } */
+
         .amarelo {
             background-color: yellow;
         }
 
         .vermelho {
             background-color: red;
+        }
+        .ana{
+            background-color: aqua;
         }
     </style>
 
@@ -55,7 +59,7 @@
 
         <colgroup>
             <col class="amarelo">
-            <col class="vermelho" span="2">
+            <col class="vermelho" span="1">
             <col class="amarelo">
             <col class="vermelho">
         </colgroup>
@@ -76,7 +80,7 @@
             <th scope="col">Profissão</th>
         </tr>
         <tr>
-            <td>Ana Marisa</td>
+            <td class="ana">Ana Marisa</td>
             <td>Feminino</td>
             <td>25 anos</td>
             <td>Jornalista</td>
