--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -6,6 +6,7 @@
     <title>Estudos de Iframe</title>
 </head>
 <body>
+    <!-- Quadro em linha -->
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o Site do 
         <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
