--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -6,10 +6,10 @@
     <title>Estudos de Iframe</title>
 </head>
 <body>
-    <!-- iFrame=>Quadro em linha -->
+    <!-- iFrame=Quadro em linha -->
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o Site do 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe width="450" height="350" src="https://www.cursoemvideo.com" frameborder="0"></iframe>
         
          para aprender a programar</p>
          <p>O site do <iframe src="https://www.google.com.br" frameborder="0">Google</iframe> tambem é muito legal!</p>
