--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe</title>
+    <style>
+        iframe{
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+        }
+    </style>
+
 </head>
+
 <body>
     <!-- iFrame=Quadro em linha -->
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o Site do 
-        <iframe width="450" height="350" src="https://www.cursoemvideo.com" frameborder="0"></iframe>
-        
-         para aprender a programar</p>
-         <p>O site do <iframe src="https://www.google.com.br" frameborder="0">Google</iframe> tambem é muito legal!</p>
-         
+    <p>Acessando o Site do
+
+        <!-- Tamanho Padrão de um iFrame 300x150px -->
+        <iframe src="https://www.cursoemvideo.com"  height="500px" scolling="auto">/<!--yes/no -->
+            <a href="http://www.cursoemvideo.com" target="_blank">Curso em Video</a>
+        </iframe>
+
+        para aprender a programar
+    </p>
+    <p>O repositorio do Guanabara
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500px" width="500px">no
+            <a href="https://gustavoguanabara.github.io" target="_blank"> GitHub</a>
+        </iframe>
+        tambem é bem legal
+    </p>
+
 </body>
+
 </html>
