--- a/exercicios/ex024/paginas-extras/pagina002.html
+++ b/exercicios/ex024/paginas-extras/pagina002.html
@@ -7,7 +7,7 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-color: blue;
+            background-color: rgba(0, 0, 255, 0.815);
             color: white;
         }
     </style>
