--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -10,6 +10,7 @@
             font-family: Arial, Helvetica, sans-serif;
 
         }
+
         iframe#tela{
             width: 95vw;
             height: 400px;
@@ -31,7 +32,9 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed recusandae possimus exercitationem reprehenderit voluptates animi nesciunt dolores commodi soluta! Perspiciatis, laboriosam rem non vel inventore nulla sint exercitationem quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt nostrum beatae obcaecati nisi illo reprehenderit molestiae pariatur blanditiis aliquid iste nulla ipsa aut quisquam minus recusandae, esse nemo. Ducimus, dignissimos.</p>
 
-    <iframe  id ="tela" name="frame" src="#" >
+    <iframe  id ="tela" name="frame" srcdoc="<h1>Escolha uma opção acima </h1> 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere cupiditate similique neque id molestias earum dignissimos obcaecati rerum, corporis fugit doloremque ea aspernatur inventore tempore quae aperiam sapiente. Provident, cupiditate.</p>
+        <img src='imagens/cursoemvideo.png' >">
         <p>Infelizmente seu navegador não é compativel!</p>
     </iframe>
 
