--- a/exercicios/ex024/paginas-extras/pagina004.html
+++ b/exercicios/ex024/paginas-extras/pagina004.html
@@ -6,7 +6,9 @@
     <title>Formulario</title>
 </head>
 <body>
-    <h1>Cadastre-se aqui</h1>
+    <h1>Cadastre-se aqui
+        
+    </h1>
     <form action="cadastro.php" method="get">
         <p>
             Nome:
