--- a/exercicios/ex024/iframe005.html
+++ b/exercicios/ex024/iframe005.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Minha pagina</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus velit neque suscipit laborum, est vel ex numquam aperiam hic nobis, sapiente officiis perferendis blanditiis. Ex eum recusandae perferendis accusamus? Ut.</p>
-    <iframe src="paginas-extras/paginas005.html" referrerpolicy="no-referre" sandbox="sandbox" ></iframe>
+    <iframe src="paginas-extras/paginas005.html" referrerpolicy="" sandbox="sandbox" ></iframe>
 
 
 
