--- a/exercicios/ex024/paginas-extras/paginas005.html
+++ b/exercicios/ex024/paginas-extras/paginas005.html
@@ -19,7 +19,7 @@
     <script>
         function clicou(){
             s = window.document.getElementById("saida")
-            s.innerHtml += '<p>Você clicou!</p>'
+            s.innerHTML += '<p>Você clicou!</p>'
         }
     </script>
 </body>
