--- a/exercicios/ex024/iframe006.html
+++ b/exercicios/ex024/iframe006.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Conteudos de nntro de iframes</h1>
+    <h1>Conteudos dentro de iframes</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt dolore ipsum aliquam in dolorum, quae iusto
         impedit dolor perspiciatis vero eveniet, quo asperiores necessitatibus cum provident cumque, fuga fugit maiores!
     </p>
