--- a/exercicios/ex025/form007.html
+++ b/exercicios/ex025/form007.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Exemplo de Formulario</h1>
+    <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="iest">Estado:</label>
