--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <main>
-        <h1>Testando Media Queries</h1>
+        <h1>Testando Média Queries</h1>
         <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
         <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
         <img id="print" src="imagens/icon-print.png" alt="Versão para impressão">
