--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <link rel="stylesheet" href="estilos/style.css">
@@ -30,6 +31,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil, natus cumque perferendis ut quaerat in itaque vero expedita, animi ullam quam distinctio dolorem! Iste, maiores dignissimos. Odio, dolores tenetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit vel consectetur minima aliquid reiciendis, repudiandae exercitationem recusandae corporis nemo ad hic eum, perferendis nisi ipsa voluptates! Cupiditate, aliquid maiores!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, in? Quidem consequuntur quae omnis repellat incidunt facere nisi debitis labore a sit expedita optio, pariatur voluptatibus rerum! Saepe, laboriosam obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas possimus natus deserunt quisquam numquam nesciunt accusamus. Quibusdam magnam sapiente corporis fuga delectus aut velit suscipit minus dolorum veritatis, quisquam eligendi.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum excepturi, commodi, tempore voluptatem officiis nobis quisquam tenetur eius quod sint, reprehenderit labore. Necessitatibus omnis quidem vero iure, est ad tenetur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, deleniti harum error officia quaerat illum vel natus, veniam quisquam aliquam inventore corporis rerum ab quidem sunt totam! Magnam, sunt labore.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet facilis at ex, quisquam voluptatum hic, nemo nam, laboriosam non autem eligendi? Minus blanditiis earum excepturi eius voluptatum optio obcaecati nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit fuga enim maiores vitae a eum? Aliquam quae, ratione debitis nostrum repellat, saepe amet quod vel quo doloremque eveniet cum corrupti?</p>
             
         </article>
     </main>
