--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <link rel="stylesheet" href="estilos/style.css">
 </head>
+
 <body>
     <header>
         <h1>Meu Site</h1>
-        <span  id="burguer"  class="material-symbols-outlined" onclick="clickMenu()">
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
             menu
-            </span>
+        </span>
         <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
@@ -28,11 +31,40 @@
     <main>
         <article>
             <h2>Testando Media Queries</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil, natus cumque perferendis ut quaerat in itaque vero expedita, animi ullam quam distinctio dolorem! Iste, maiores dignissimos. Odio, dolores tenetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit vel consectetur minima aliquid reiciendis, repudiandae exercitationem recusandae corporis nemo ad hic eum, perferendis nisi ipsa voluptates! Cupiditate, aliquid maiores!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, in? Quidem consequuntur quae omnis repellat incidunt facere nisi debitis labore a sit expedita optio, pariatur voluptatibus rerum! Saepe, laboriosam obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas possimus natus deserunt quisquam numquam nesciunt accusamus. Quibusdam magnam sapiente corporis fuga delectus aut velit suscipit minus dolorum veritatis, quisquam eligendi.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum excepturi, commodi, tempore voluptatem officiis nobis quisquam tenetur eius quod sint, reprehenderit labore. Necessitatibus omnis quidem vero iure, est ad tenetur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, deleniti harum error officia quaerat illum vel natus, veniam quisquam aliquam inventore corporis rerum ab quidem sunt totam! Magnam, sunt labore.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet facilis at ex, quisquam voluptatum hic, nemo nam, laboriosam non autem eligendi? Minus blanditiis earum excepturi eius voluptatum optio obcaecati nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit fuga enim maiores vitae a eum? Aliquam quae, ratione debitis nostrum repellat, saepe amet quod vel quo doloremque eveniet cum corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos saepe, quas nam necessitatibus dolores neque minima voluptate ullam perferendis molestiae, magni nobis odit error aut corporis. Optio dolores eveniet expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita in autem deleniti error voluptatem ad, voluptatibus facilis? Iusto quo voluptatum, sunt commodi, obcaecati harum qui, ipsum dignissimos tenetur expedita modi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero numquam eum, illo error sunt accusantium quas aliquid dicta quam necessitatibus ipsa ad ut dolor natus minima similique, voluptates id ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae sint recusandae excepturi! Nihil nesciunt voluptatum voluptates itaque rem corporis sapiente culpa fugit reprehenderit aut eaque, dicta voluptatibus maiores perspiciatis. Fugit? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis nostrum, adipisci officiis esse odit est inventore sequi et possimus eveniet quis neque rem atque sunt explicabo hic fuga minima quos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eum veniam est laboriosam expedita non, unde ipsum! Aliquid non nulla, ducimus, excepturi numquam sit tempora necessitatibus doloribus reprehenderit perferendis fuga!</p>
-            
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil, natus cumque perferendis ut
+                quaerat in itaque vero expedita, animi ullam quam distinctio dolorem! Iste, maiores dignissimos. Odio,
+                dolores tenetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit vel
+                consectetur minima aliquid reiciendis, repudiandae exercitationem recusandae corporis nemo ad hic eum,
+                perferendis nisi ipsa voluptates! Cupiditate, aliquid maiores!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, in? Quidem consequuntur quae omnis
+                repellat incidunt facere nisi debitis labore a sit expedita optio, pariatur voluptatibus rerum! Saepe,
+                laboriosam obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas possimus natus
+                deserunt quisquam numquam nesciunt accusamus. Quibusdam magnam sapiente corporis fuga delectus aut velit
+                suscipit minus dolorum veritatis, quisquam eligendi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum excepturi, commodi, tempore voluptatem
+                officiis nobis quisquam tenetur eius quod sint, reprehenderit labore. Necessitatibus omnis quidem vero
+                iure, est ad tenetur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, deleniti harum
+                error officia quaerat illum vel natus, veniam quisquam aliquam inventore corporis rerum ab quidem sunt
+                totam! Magnam, sunt labore.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet facilis at ex, quisquam voluptatum hic,
+                nemo nam, laboriosam non autem eligendi? Minus blanditiis earum excepturi eius voluptatum optio
+                obcaecati nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit fuga enim
+                maiores vitae a eum? Aliquam quae, ratione debitis nostrum repellat, saepe amet quod vel quo doloremque
+                eveniet cum corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos saepe, quas
+                nam necessitatibus dolores neque minima voluptate ullam perferendis molestiae, magni nobis odit error
+                aut corporis. Optio dolores eveniet expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita in autem deleniti error voluptatem ad, voluptatibus facilis? Iusto quo voluptatum, sunt
+                commodi, obcaecati harum qui, ipsum dignissimos tenetur expedita modi. Lorem ipsum dolor, sit amet
+                consectetur adipisicing elit. Libero numquam eum, illo error sunt accusantium quas aliquid dicta quam
+                necessitatibus ipsa ad ut dolor natus minima similique, voluptates id ratione. Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Repudiandae sint recusandae excepturi! Nihil nesciunt voluptatum
+                voluptates itaque rem corporis sapiente culpa fugit reprehenderit aut eaque, dicta voluptatibus maiores
+                perspiciatis. Fugit? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis nostrum,
+                adipisci officiis esse odit est inventore sequi et possimus eveniet quis neque rem atque sunt explicabo
+                hic fuga minima quos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eum veniam est
+                laboriosam expedita non, unde ipsum! Aliquid non nulla, ducimus, excepturi numquam sit tempora
+                necessitatibus doloribus reprehenderit perferendis fuga!</p>
+
         </article>
     </main>
 
@@ -47,4 +79,5 @@
         }
     </script>
 </body>
+
 </html>
